# umarise-mlflow

./: README.md  pyproject.toml
umarise_mlflow/: __init__.py  anchor.py  autolog.py
umarise_mlflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
umarise_mlflow/umarise_mlflow/: anchor.py
